--- a/src/app/Views/Components/nav-blank/nav-blank.component.html
+++ b/src/app/Views/Components/nav-blank/nav-blank.component.html
@@ -10,9 +10,20 @@
     <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item"><a class="nav-link text-white active" routerLinkActive="bg-danger"  routerLink="home">Home</a></li>
+
+        <li class="nav-item"><a class="nav-link text-white " routerLinkActive="bg-danger"  routerLink="WatchlistMovie">Watchlist Movie</a></li>
+
+        <li class="nav-item">
+          <a class="nav-link position-relative" routerLink="WatchlistMovie">
+            <i  style="font-size:18px" class="fa-solid fa-heart text-danger"></i>
+            <span *ngIf="watchlistCount" style="font-size:10px" class="badge text-bg-warning position-absolute top-0 end-0 ">{{watchlistCount}}</span>
+          </a>
+        </li>
+
         <li class="nav-item ">
           <span class="nav-link  ms-5   btn btn-outline-danger text-white " (click)="LogOut()">LogOut</span>
         </li>
+
 
       </ul>
     </div>
