--- a/src/app/Views/Components/nav-blank/nav-blank.component.html
+++ b/src/app/Views/Components/nav-blank/nav-blank.component.html
@@ -15,6 +15,9 @@
         <li class="nav-item"><a class="nav-link text-white " routerLinkActive="bg-danger"  routerLink="WatchlistMovie">Watchlist Movie</a></li>
 
 
+        <li class="nav-item"><a class="nav-link text-white " routerLinkActive="bg-danger"  routerLink="details">Details</a></li>
+
+
         <li class="nav-item dropdown-wrapper">
           <a class="nav-link text-white" routerLinkActive="bg-danger" >Movies</a>
           <ul class="dropdown-menu-custom  ">
