--- a/src/app/Views/Components/now-playing-movies/now-playing-movies.component.html
+++ b/src/app/Views/Components/now-playing-movies/now-playing-movies.component.html
@@ -1,1 +1,43 @@
 <p  class="p-5  bg-warning text-center text-white">now-playing-movies works!</p>
+
+
+
+<div class="row g-5">
+    @for (movie of nowPlayingMoviesList; track $index) {
+    
+      <ng-container>
+    
+        <div class="col-md-4">
+    
+          <div class="card bg-dark text-white" >
+            <img [src]="`https://image.tmdb.org/t/p/w500${movie.poster_path}`" class="card-img-top" alt="Movie Poster" style="height: 300px; object-fit: cover; border-radius: 10px;">
+            <div class="card-body p-2">
+              <h6 class="card-title mb-1" style="font-size: 1rem;">{{movie.title}}</h6>
+              <div class="d-flex justify-content-between align-items-center" style="font-size: 0.8rem;">
+                <div class="d-flex align-items-center gap-1">
+                  <i class="bi bi-clock"></i>
+                  <span>1h 30min</span>
+                </div>
+    
+                <div class="d-flex align-items-center gap-1">
+    
+                 <div class="WatchList">
+                  <button class="btn btn-outline-warning" (click)="addToWatchList(movie.id)">+</button>
+                    <i class="bi bi-plus"></i>
+                    <span>Add to Watchlist</span>
+                 </div>
+                  <i class="bi bi-eye"></i>
+                  <span>{{movie.popularity.toFixed(1)}}K</span>
+                </div>
+    
+              </div>
+            </div>
+          </div>
+        </div>
+      </ng-container>
+    
+    }
+    
+    
+    </div>
+    
