Add Tostar notification for better user expirence and scroll up buttom

--- a/src/app/Views/Components/NotFound/NotFound.component.html
+++ b/src/app/Views/Components/NotFound/NotFound.component.html
@@ -1,3 +1,8 @@
-<p>
-  NotFound works!
-</p>
+<div class="not-found-container">
+  <div class="error-code">404</div>
+  <div class="error-message">Oops! Page Not Found</div>
+  <p class="error-description">
+    The page you're looking for doesn't exist .
+  </p>
+  <a routerLink="home" class="home-button">Return to Home</a>
+</div>
