--- a/src/app/Views/Components/nav-blank/nav-blank.component.html
+++ b/src/app/Views/Components/nav-blank/nav-blank.component.html
@@ -17,6 +17,7 @@
 
         <li class="nav-item"><a class="nav-link text-white " routerLinkActive="bg-danger"  routerLink="details">Details</a></li>
 
+        <li class="nav-item"><a class="nav-link text-white " routerLinkActive="bg-danger"  routerLink="movie-search">movie-search</a></li>
 
         <li class="nav-item dropdown-wrapper">
           <a class="nav-link text-white" routerLinkActive="bg-danger" >Movies</a>
